# lake-skill

./: .dockerignore  .gitignore  CODEX_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  README_EN.md  SECURITY.md  config.default.yaml  docker-compose.yml  pyproject.toml
.agents/: product-marketing.md
.codex/skills/bondlens/: SKILL.md  evidence_audit.py  report_lint.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  package-skill.yml  release.yml  security.yml
analyses/zy-tf/: README.md  bondlens_report_zy_tf.md  bondlens_report_zy_tf_v4.md  communication_patterns_v4.md  communication_playbook.md  communication_playbook_v4.md  interaction_patterns.md  interaction_patterns_v4.md  tf_persona_v4.md  tf_personality_profile.md  v3_vs_v4_comparison.md  zy_persona_v4.md  zy_personality_profile.md
cli/bondlens/: cli.py  config.py  doctor_checks.py  errors.py  intake_io.py  jsonl_utils.py  schema.py
cli/bondlens/adapters/: base.py  generic_jsonl.py  ocr_transcript.py  sqlite_inspector.py
cli/bondlens/evidence/: indexer.py
cli/bondlens/kb/: init.py  schema.py
cli/bondlens/reports/: digest.py
cli/bondlens/segmentation/: episode_detector.py  sessionizer.py
cli/lake_skill/: __init__.py  analysis_windows.py  bundle.py  cli.py  config.py  demo_assets.py  doctor_checks.py  errors.py  intake_io.py  interaction_stats.py  relationship_signals.py  schema.py  workspace.py
cli/lake_skill/adapters/: generic_csv.py  voice_transcript.py  wechat_csv.py  wechat_sqlite.py  wechat_txt.py
cli/lake_skill/evidence/: indexer.py
cli/lake_skill/kb/: init.py  patch.py  schema.py
docs/: FAQ.md  chat_record_preparation.md  codex_setup.md  input_formats.md  lakeskill_public_launch_plan.md  launch_plan.md  migration_from_bondlens.md  platform_compatibility.md  privacy_model.md  promotion_plan.md  quickstart.md  release-notes-v0.12.0.md  wechat_data_analysis_guide.md
docs/archive/: DEVELOPMENT_PLAN.md  README.md
examples/: generate_examples.py
examples/expected_outputs/: cli_export_requirements.md  representative_input_requirements.md  sparse_input_requirements.md
examples/model_outputs/: README.md  cli_export_output.md  representative_output.md  sparse_output.md
examples/prompts/: cli_export_input.md  representative_input.md  sparse_input.md
examples/social_demo/: lakeskill_intake.md  lakeskill_intake.yaml  lakeskill_report_demo.md  relationship_signal_ledger.jsonl  social_action_card_demo.md  synthetic_chat.csv
examples/synthetic_input/: chat.csv  synthetic.db  voice.srt
examples/synthetic_outputs/: digest.redacted.md  evidence.redacted.jsonl  messages.redacted.jsonl  raw_messages.jsonl  sessions.redacted.jsonl
references/frameworks/: big_five_communication_signals.md  relationship_communication_patterns.md
scripts/: build_evidence_index.py  evidence_audit.py  extract_messages.py  relationship_signal_audit.py  report_lint.py
skill/prompts/: attachment_analyzer.md  coach_mode.md  communication_analyzer.md  correction_handler.md  data_assessment.md  intake.md  interaction_analyzer.md  merger.md  persona_analyzer.md  report_builder.md
skills/bondlens/: SKILL.md
skills/lake-skill/: .skill-manifest.json  SKILL.md
tests/: conftest.py
tests/integration/: test_cli_pipeline.py
tests/safety/: test_no_decryption_behavior.py  test_privacy_leakage.py
tests/unit/: test_cli_intake_doctor.py  test_csv_adapter.py  test_evidence_index.py  test_productization.py  test_prompts.py  test_redaction.py  test_relationship_signal_audit.py  test_relationship_signals.py  test_schema.py  test_segmentation.py  test_simple.py  test_txt_adapter.py
tools/: check.py  check_expected_output.py  check_no_forbidden_network_calls.py  check_no_real_private_data.py  package_skill.py  sync_skill_copies.py
(+117 files in other folders)
