[project]
name = "bondlens"
version = "0.2.0"
description = "BondLens — Evidence-based relationship chat analysis Skill with privacy-first local preprocessing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "python-dateutil>=2.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[project.scripts]
bondlens = "bondlens.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["cli"]
include = ["bondlens*"]

[tool.bandit]
exclude_dirs = ["tests", "docs", "examples"]
skips = ["B110", "B608"]
