[project]
name = "lake-skill"
version = "0.10.0"
description = "Evidence-based intimate relationship chat analysis. Every claim has an evidence ID. Privacy-first."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["chat-analysis", "relationship", "evidence-based", "privacy-first", "wechat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "python-dateutil>=2.9",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/HZYO-0/lake-skill"
Repository = "https://github.com/HZYO-0/lake-skill"
Issues = "https://github.com/HZYO-0/lake-skill/issues"
Documentation = "https://github.com/HZYO-0/lake-skill/tree/main/docs"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
lake-skill = "lake_skill.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["cli"]
include = ["lake_skill*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.bandit]
exclude_dirs = ["tests", "docs", "examples"]
skips = ["B110", "B608"]
